# reducers

./: .gitignore  .travis.yml  CHANGELOG.markdown  README.markdown  reducers.cabal
.github/workflows/: haskell-ci.yml
Data/: Generator.hs
Data/Generator/: Combinators.hs  LZ78.hs
Data/Semigroup/: Alt.hs  Alternative.hs  Applicative.hs  Apply.hs  Apply.hz~  Generator.hs  Instances.hs  MonadPlus.hs  Reducer.hs  Self.hs  Union.hs
Data/Semigroup/Reducer/: With.hs
src/Data/: Generator.hs
src/Data/Generator/: Combinators.hs
src/Data/Semigroup/: .Apply.hs.swp  Alt.hs  Alternative.hs  Applicative.hs  Apply.hs  Combinators.hs  Generator.hs  Instances.hs  Monad.hs  MonadPlus.hs  Reducer.hs  Self.hs  Union.hs
src/Data/Semigroup/Reducer/: With.hs
