name:          reducers
category:      Data, Math, Numerical, Semigroups
version:       3.12.4
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/reducers/
bug-reports:   http://github.com/ekmett/reducers/issues
copyright:     Copyright (C) 2008-2016 Edward A. Kmett
synopsis:      Semigroups, specialized containers and a general map/reduce framework
description:   Semigroups, specialized containers and a general map/reduce framework.
build-type:    Simple
extra-source-files: CHANGELOG.markdown README.markdown
tested-with:   GHC == 7.0.4
             , GHC == 7.2.2
             , GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.7
             , GHC == 9.4.5
             , GHC == 9.6.1

source-repository head
  type: git
  location: git://github.com/ekmett/reducers.git

library
  hs-source-dirs: src

  build-depends:
    base                   >= 4        && < 5,
    array                  >= 0.3      && < 0.6,
    transformers           >= 0.2      && < 0.7,
    bytestring             >= 0.9.1    && < 0.12,
    containers             >= 0.3      && < 0.7,
    fingertree             >= 0.1      && < 0.2,
    hashable               >= 1.1.2.1  && < 1.5,
    text                   >= 0.11.1.5 && < 2.1,
    unordered-containers   >= 0.2      && < 0.3,
    semigroupoids          >= 4        && < 7

  if impl(ghc < 8.0)
    build-depends:
      semigroups           >= 0.9      && < 1

  exposed-modules:
    Data.Generator
    Data.Generator.Combinators
    Data.Semigroup.Generator
    Data.Semigroup.Reducer
    Data.Semigroup.Reducer.With
    Data.Semigroup.Instances
    Data.Semigroup.Union
    Data.Semigroup.Apply
    Data.Semigroup.Applicative
    Data.Semigroup.Alt
    Data.Semigroup.Alternative
    Data.Semigroup.Monad
    Data.Semigroup.MonadPlus
    Data.Semigroup.Self

  if impl(ghc)
    default-extensions: DeriveDataTypeable
    cpp-options: -DLANGUAGE_DeriveDataTypeable

  ghc-options: -Wall
  default-language: Haskell2010

  -- hack around the buggy unused matches check for class associated types in ghc 8 rc1
  if impl(ghc >= 8)
    ghc-options: -fno-warn-unused-matches

