name:          reducers
category:      Data, Math, Numerical, Semigroups
version:       3.12.5
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/reducers/
bug-reports:   http://github.com/ekmett/reducers/issues
copyright:     Copyright (C) 2008-2016 Edward A. Kmett
synopsis:      Semigroups, specialized containers and a general map/reduce framework
description:   Semigroups, specialized containers and a general map/reduce framework.
build-type:    Simple
extra-source-files: CHANGELOG.markdown README.markdown
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.6
             , GHC == 9.8.4
             , GHC == 9.10.1
             , GHC == 9.12.1

source-repository head
  type: git
  location: git://github.com/ekmett/reducers.git

library
  hs-source-dirs: src

  build-depends:
    base                   >= 4.9      && < 5,
    array                  >= 0.3      && < 0.6,
    transformers           >= 0.2      && < 0.7,
    bytestring             >= 0.9.1    && < 0.13,
    containers             >= 0.3      && < 0.9,
    fingertree             >= 0.1      && < 0.2,
    hashable               >= 1.1.2.1  && < 1.6,
    text                   >= 0.11.1.5 && < 2.2,
    unordered-containers   >= 0.2      && < 0.3,
    semigroupoids          >= 4        && < 7

  exposed-modules:
    Data.Generator
    Data.Generator.Combinators
    Data.Semigroup.Generator
    Data.Semigroup.Reducer
    Data.Semigroup.Reducer.With
    Data.Semigroup.Instances
    Data.Semigroup.Union
    Data.Semigroup.Apply
    Data.Semigroup.Applicative
    Data.Semigroup.Alt
    Data.Semigroup.Alternative
    Data.Semigroup.Monad
    Data.Semigroup.MonadPlus
    Data.Semigroup.Self

  if impl(ghc)
    default-extensions: DeriveDataTypeable
    cpp-options: -DLANGUAGE_DeriveDataTypeable

  ghc-options: -Wall
  -- hack around the buggy unused matches check for class associated types in ghc 8 rc1
  ghc-options: -Wno-unused-matches
  default-language: Haskell2010
